Z-index fix

--- a/src/core/components/AppHeader/HeaderFrame/HeaderFrame.scss
+++ b/src/core/components/AppHeader/HeaderFrame/HeaderFrame.scss
@@ -1,6 +1,8 @@
 @import '~style-utils';
 
 .frame {
+  position: relative;
+  z-index: z-index(header);
   width: 100%;
   height: ui-layout(headerHeightSm);
   padding: 0 spacing(sm);
